# profile_lg_lf

./: README.md  main.py  pyproject.toml  run_demo.py
app/agents/: profile_agent.py
app/client/: a2a_client.py
app/schemas/: profile_schemas.py
app/server/: main.py
app/telemetry/: tracing.py
app/tools/: profile_tools.py
app/utils/: builders.py  intent.py  intent_keywords.py  intent_llm.py  json_utils.py
